--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -31,6 +31,16 @@ jobs:
       uses: extractions/setup-just@v3
 
     - name: Setup Google Drive credentials
+      env:
+        GDRIVE_CRED_DO1: ${{ secrets.GDRIVE_CRED_DO1 }}
+        GDRIVE_CRED_DO2: ${{ secrets.GDRIVE_CRED_DO2 }}
+        GDRIVE_CRED_DS: ${{ secrets.GDRIVE_CRED_DS }}
+        GDRIVE_TOKEN_DO1: ${{ secrets.GDRIVE_TOKEN_DO1 }}
+        GDRIVE_TOKEN_DO2: ${{ secrets.GDRIVE_TOKEN_DO2 }}
+        GDRIVE_TOKEN_DS: ${{ secrets.GDRIVE_TOKEN_DS }}
+        EMAIL_DO1: ${{ secrets.EMAIL_DO1 }}
+        EMAIL_DO2: ${{ secrets.EMAIL_DO2 }}
+        EMAIL_DS: ${{ secrets.EMAIL_DS }}
       run: |
         set +x  # Disable command echoing to prevent secrets in logs
 
@@ -38,40 +48,41 @@ jobs:
         mkdir -p credentials
         chmod 700 credentials
 
-        # Write OAuth credentials (client secrets) with restricted permissions
-        echo '${{ secrets.GDRIVE_CRED_DO1 }}' > credentials/do1.json
+        # Write OAuth credentials (client secrets) using printf for proper handling
+        printf '%s' "$GDRIVE_CRED_DO1" > credentials/do1.json
         chmod 600 credentials/do1.json
-        echo '${{ secrets.GDRIVE_CRED_DO2 }}' > credentials/do2.json
+        printf '%s' "$GDRIVE_CRED_DO2" > credentials/do2.json
         chmod 600 credentials/do2.json
-        echo '${{ secrets.GDRIVE_CRED_DS }}' > credentials/ds.json
+        printf '%s' "$GDRIVE_CRED_DS" > credentials/ds.json
         chmod 600 credentials/ds.json
 
-        # Write OAuth tokens (refresh tokens) with restricted permissions
-        echo '${{ secrets.GDRIVE_TOKEN_DO1 }}' > credentials/token_do1.json
+        # Write OAuth tokens (refresh tokens) using printf for proper handling
+        printf '%s' "$GDRIVE_TOKEN_DO1" > credentials/token_do1.json
         chmod 600 credentials/token_do1.json
-        echo '${{ secrets.GDRIVE_TOKEN_DO2 }}' > credentials/token_do2.json
+        printf '%s' "$GDRIVE_TOKEN_DO2" > credentials/token_do2.json
         chmod 600 credentials/token_do2.json
-        echo '${{ secrets.GDRIVE_TOKEN_DS }}' > credentials/token_ds.json
+        printf '%s' "$GDRIVE_TOKEN_DS" > credentials/token_ds.json
         chmod 600 credentials/token_ds.json
 
         # Create .env file with restricted permissions
-        cat > credentials/.env << 'EOF'
-        SYFT_EMAIL_DO1=${{ secrets.EMAIL_DO1 }}
-        SYFT_CRED_FNAME_DO1=do1.json
-        SYFT_TOKEN_FNAME_DO1=token_do1.json
-        SYFT_EMAIL_DO2=${{ secrets.EMAIL_DO2 }}
-        SYFT_CRED_FNAME_DO2=do2.json
-        SYFT_TOKEN_FNAME_DO2=token_do2.json
-        SYFT_EMAIL_DS=${{ secrets.EMAIL_DS }}
-        SYFT_CRED_FNAME_DS=ds.json
-        SYFT_TOKEN_FNAME_DS=token_ds.json
-        EOF
+        {
+          echo "SYFT_EMAIL_DO1=$EMAIL_DO1"
+          echo "SYFT_CRED_FNAME_DO1=do1.json"
+          echo "SYFT_TOKEN_FNAME_DO1=token_do1.json"
+          echo "SYFT_EMAIL_DO2=$EMAIL_DO2"
+          echo "SYFT_CRED_FNAME_DO2=do2.json"
+          echo "SYFT_TOKEN_FNAME_DO2=token_do2.json"
+          echo "SYFT_EMAIL_DS=$EMAIL_DS"
+          echo "SYFT_CRED_FNAME_DS=ds.json"
+          echo "SYFT_TOKEN_FNAME_DS=token_ds.json"
+        } > credentials/.env
         chmod 600 credentials/.env
 
         echo "Credentials setup complete"
 
-    - name: Verify credentials exist
+    - name: Verify credentials exist and are valid
       run: |
+        # Check all files exist and are non-empty
         for file in do1.json do2.json ds.json token_do1.json token_do2.json token_ds.json .env; do
           if [ ! -s "credentials/$file" ]; then
             echo "ERROR: credentials/$file is missing or empty"
@@ -79,7 +90,23 @@ jobs:
             exit 1
           fi
         done
-        echo "All credential files verified"
+
+        # Verify JSON files are valid JSON
+        for json_file in do1.json do2.json ds.json token_do1.json token_do2.json token_ds.json; do
+          if ! python -c "import json; json.load(open('credentials/$json_file'))" 2>/dev/null; then
+            echo "ERROR: credentials/$json_file is not valid JSON"
+            echo "File size: $(wc -c < "credentials/$json_file") bytes"
+            exit 1
+          fi
+        done
+
+        # Show file sizes for debugging (without revealing content)
+        echo "Credential file sizes:"
+        for file in do1.json do2.json ds.json token_do1.json token_do2.json token_ds.json .env; do
+          echo "  $file: $(wc -c < "credentials/$file") bytes"
+        done
+
+        echo "All credential files verified and valid"
 
     - name: Run integration tests
       run: just test-integration
