--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,7 +91,8 @@ jobs:
     - name: Run tests first
       run: |
         echo "Running tests before version bump..."
-        just test
+        just test-unit
+        just test-integration-inmemory
 
         if [ $? -ne 0 ]; then
           echo "Error: Tests failed! Cannot proceed with release."
